# alloc-singleton

./: .travis.yml  Cargo.toml  README.md
ci/: script.sh
src/: lib.rs  nightly.rs  stable.rs
src/nightly/: consts.rs  pool.rs
src/nightly/pool/: unsend.rs
src/stable/: pool.rs
